fully responsive on top 3 browsers, working on Firefox bug of not grabbing music

--- a/frontend/src/CSS/index.css
+++ b/frontend/src/CSS/index.css
@@ -15,6 +15,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  background: white;
 }
 
 button, input {
@@ -81,6 +82,31 @@ p {
 
 .dark-gray {
   color: #5F5F65;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
 
 @media (max-width: 750px), (max-width: 1024px) {
