--- a/frontend/src/CSS/profile.css
+++ b/frontend/src/CSS/profile.css
@@ -66,8 +66,8 @@
 }
 
 #friend-modal, #error-modal {
-  width: 35vw;
-  height: 60vh;
+  width: 30em;
+  height: 60%;
   background: white;
   padding: 20px;
   display: flex;
@@ -106,6 +106,7 @@
 
 #search-user {
   width: 90%;
+  height: 100%;
   font-size: inherit;
   padding: 15px;
   border: 1px solid white;
@@ -133,11 +134,6 @@
   #friend-modal, #error-modal {
     width: 75%;
   }
-
-  /* #new-swap {
-    height: 97%;
-    padding-bottom: 3%;
-  } */
 
   #profile {
     flex-direction: column;
